--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2240,6 +2240,7 @@ input, select, textarea {
 			text-transform: none !important;
 			font-family: 'Font Awesome 5 Free';
 			font-weight: 400;
+			color: #fff;
 		}
 
 		.icon > .label {
@@ -2889,6 +2890,10 @@ input, select, textarea {
 			.statistics li.style1 {
 				background-color: #011C26;
 			}
+			.statistics li.style1:hover{
+				cursor: pointer;
+			}
+
 
 			.statistics li.style2 {
 				background-color: #F29727;
@@ -2933,6 +2938,85 @@ input, select, textarea {
 					font-size: 2.75rem;
 					line-height: 1.3;
 				}
+		
+		.conta{
+			width: 100%;
+			position: relative;
+			display: flex;
+			justify-content: space-between;
+		}
+		.conta .card{
+			position: relative;
+		}
+		.conta .card .face{
+			width: 100%;
+			height: 200px;
+			transition: 0.5s;
+		}
+		.conta .card .face.face1{
+			position: relative;
+			background: #011C26;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			z-index: 1;
+			transform: translateY(100px);
+		}
+		.conta .card:hover .face.face1{
+			background-image: linear-gradient(to bottom, #F29727, #F26716);
+			transform: translateY(0);
+		}
+		.conta .card .face.face1.conte{
+			opacity: 0.2;
+			transition: 0.5s;
+		}
+		.conta .card:hover .face.face1.conte{
+			opacity: 1;
+		}
+		.conta .card .face.face1.conte span{
+			max-width: 100px;
+		}
+		.conta .card .face.face1.conte h3{
+			margin: 10px 0 0;
+			padding: 0;
+			color: #fff;
+			text-align: center;
+			font-size: 1.5em;
+
+		}
+		.conta .card .face.face2{
+			position: relative;
+			background: #fff;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 20px;
+			box-sizing: border-box;
+			box-shadow: 0 20px 50px rgba(0,0,0,0.8);
+			transform: translateY(-100px);
+		}
+		.conta .card:hover .face.face2{
+			background-color: #F26716;
+			transform: translateY(0);
+		}
+		.conta .card .face.face2 .conte p{
+			margin: 0;
+			padding: 0;
+		}
+		.conta .card .face.face2 .conte a{
+			margin: 15px 0 0;
+			display: inline-block;
+			text-decoration: none;
+			font-weight: 900;
+			color: #000;
+			padding: 5px;
+			border: 1px solid #000;
+		}
+		.conta .card .face.face2 .conte a:hover{
+			background: #000;
+			color: #fff;
+		}
+
 
 		@media screen and (max-width: 980px) {
 
@@ -2967,6 +3051,9 @@ input, select, textarea {
 
 				.statistics li strong, .statistics li b {
 					font-size: 2.5em;
+				}
+				.conta{
+					flex-wrap: wrap;
 				}
 
 		}
@@ -3244,7 +3331,7 @@ input, select, textarea {
 		}
 
 		#nav h1, #nav h2, #nav h3, #nav h4, #nav h5, #nav h6 {
-			color: #636363;
+			color: #fff;
 		}
 
 		#nav blockquote {
@@ -3338,7 +3425,7 @@ input, select, textarea {
 
 	#main {
 		background-color: #ffffff;
-		color: #636363;
+		color: #000;
 		border-radius: 0.25em;
 	}
 
@@ -3355,7 +3442,7 @@ input, select, textarea {
 		}
 
 		#main h1, #main h2, #main h3, #main h4, #main h5, #main h6 {
-			color: #636363;
+			color: #fff;
 		}
 
 		#main blockquote {
