--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(fontawesome-all.min.css);
 @import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400';
 
@@ -105,10 +106,10 @@ input, select, textarea {
 
 	body {
 		background-color: #935d8c;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #F29727 15%, #8C2A14 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #F29727 15%, #8C2A14 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #F29727 15%, #8C2A14 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, #F29727 15%, #8C2A14 85%);
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, #fa5600 15%, #c72800 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, #fa5600 15%, #c72800 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, #fa5600 15%, #c72800 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, #fa5600 15%, #c72800 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -127,10 +128,10 @@ input, select, textarea {
 
 	body {
 		background-color: #8C2A14;
-		color: rgba(255, 255, 255, 0.65);
+		color: rgba(255, 255, 255, 0.89);
 	}
 	h1, h2, h3{
-		font-family: "Big Stem", Helvetica, sans-serif;
+		font-family: "SquareFont", sans-serif;
 	}
 	body, input, select, textarea {
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
@@ -223,7 +224,7 @@ input, select, textarea {
 	}
 
 	h3 {
-		font-size: 1.75em;
+		font-size: 1.5em;
 	}
 
 	h4 {
@@ -2960,7 +2961,7 @@ input, select, textarea {
 		}
 		.conta .card .face.face1{
 			position: relative;
-			background: #000; /*011C26*/
+			background: #fff; /*011C26*/
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -2974,9 +2975,11 @@ input, select, textarea {
 		.conta .card .face.face1.conte{
 			opacity: 0.2;
 			transition: 0.5s;
+
 		}
 		.conta .card:hover .face.face1.conte{
 			opacity: 1;
+			
 		}
 		.conta .card .face.face1.conte span{
 			max-width: 100px;
@@ -2997,7 +3000,7 @@ input, select, textarea {
 			align-items: center;
 			padding: 20px;
 			box-sizing: border-box;
-			box-shadow: 0 20px 50px rgba(0,0,0,0.8);
+			box-shadow: 0 5px 50px rgba(0,0,0,0.8);
 			transform: translateY(-100px);
 		}
 		.conta .card:hover .face.face2{
@@ -3007,6 +3010,7 @@ input, select, textarea {
 		.conta .card .face.face2 .conte p{
 			margin: 0;
 			padding: 0;
+			width: 200px;
 		}
 		.conta .card .face.face2 .conte a{
 			margin: 15px 0 0;
@@ -3185,6 +3189,7 @@ input, select, textarea {
 
 			#header.alt h1 {
 				font-size: 3.25em;
+				color: #fff;
 			}
 
 			#header.alt > * {
@@ -3505,7 +3510,7 @@ input, select, textarea {
 			#main input[type="button"].primary,
 			#main button.primary,
 			#main .button.primary {
-				background-color: #F26716;
+				background-color: #fa5600;
 				color: #ffffff !important;
 				box-shadow: none;
 			}
@@ -3515,7 +3520,7 @@ input, select, textarea {
 				#main input[type="button"].primary:hover,
 				#main button.primary:hover,
 				#main .button.primary:hover {
-					background-color: #591812;
+					background-color: #c72800;
 				}
 
 				#main input[type="submit"].primary:active,
